WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147872
[Content Filtering] REGRESSION (
r182356
): Provisional URL is incorrect in didReceiveServerRedirectForProvisionalLoadForFrame when Content Filtering is enabled
https://bugs.webkit.org/show_bug.cgi?id=147872
Summary
[Content Filtering] REGRESSION (r182356): Provisional URL is incorrect in did...
Andy Estes
Reported
2015-08-11 00:16:21 PDT
When Content Filtering is enabled and a server redirect occurs, the provisional URL does is not updated to the redirect URL when didReceiveServerRedirectForProvisionalLoadForFrame is sent to the load delegate.
Attachments
Patch
(28.85 KB, patch)
2015-08-23 17:40 PDT
,
Andy Estes
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2015-08-11 00:18:05 PDT
rdar://problem/22044000
Andy Estes
Comment 2
2015-08-23 17:40:11 PDT
Created
attachment 259742
[details]
Patch
mitz
Comment 3
2015-08-23 18:12:22 PDT
Comment on
attachment 259742
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=259742&action=review
> Tools/TestWebKitAPI/Configurations/WebProcessPlugIn.xcconfig:32 > +LD_RUNPATH_SEARCH_PATHS = "@loader_path/../../..";
Is this number of ../ right for iOS as well?
> Tools/TestWebKitAPI/Tests/WebKit2Cocoa/ContentFiltering.mm:38 > +static bool isDone = false;
Don’t have to initialize to false.
Andy Estes
Comment 4
2015-08-23 22:36:42 PDT
(In reply to
comment #3
)
> Comment on
attachment 259742
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=259742&action=review
> > > Tools/TestWebKitAPI/Configurations/WebProcessPlugIn.xcconfig:32 > > +LD_RUNPATH_SEARCH_PATHS = "@loader_path/../../.."; > > Is this number of ../ right for iOS as well?
Nope, it's not. Good catch.
> > > Tools/TestWebKitAPI/Tests/WebKit2Cocoa/ContentFiltering.mm:38 > > +static bool isDone = false; > > Don’t have to initialize to false.
Ok. Thanks again for the review!
Andy Estes
Comment 5
2015-08-23 23:48:50 PDT
Committed
r188851
: <
http://trac.webkit.org/changeset/188851
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug