Source/WebCore/testing/MockContentFilterSettings.cpp
@@ -30,6 +30,7 @@
 
 #include "ContentFilter.h"
 #include "ContentFilterUnblockHandler.h"
+#include "MockContentFilter.h"
 #include <wtf/NeverDestroyed.h>
 
 namespace WebCore {
@@ -43,6 +44,12 @@ MockContentFilterSettings& MockContentFilterSettings::singleton()
 void MockContentFilterSettings::reset()
 {
     singleton() = MockContentFilterSettings();
+}
+
+void MockContentFilterSettings::setEnabled(bool enabled)
+{
+    MockContentFilter::ensureInstalled();
+    m_enabled = enabled;
 }
 
 const String& MockContentFilterSettings::unblockRequestURL() const
